# cpp-piano

./: .gitignore  CMakeLists.txt  linux-build-run.sh  main.cpp  readme.md
